WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
228001
[Cocoa] Web Inspector: Service workers can't be inspected in Safari Technology Preview
https://bugs.webkit.org/show_bug.cgi?id=228001
Summary
[Cocoa] Web Inspector: Service workers can't be inspected in Safari Technolog...
Patrick Angle
Reported
2021-07-15 13:00:19 PDT
<
rdar://74766084
>
Attachments
Patch v1.0
(2.49 KB, patch)
2021-07-15 16:13 PDT
,
Patrick Angle
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Patrick Angle
Comment 1
2021-07-15 16:13:11 PDT
Created
attachment 433633
[details]
Patch v1.0
Per Arne Vollan
Comment 2
2021-07-19 10:55:46 PDT
Comment on
attachment 433633
[details]
Patch v1.0 R=me.
EWS
Comment 3
2021-07-19 11:15:00 PDT
Committed
r280039
(
239774@main
): <
https://commits.webkit.org/239774@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 433633
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug